--- a/index/_config.yml
+++ b/index/_config.yml
@@ -18,20 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Main web
-email: sergio.polo.garcia21@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  https://sergiopologarcia.github.io/
+title: Sergio Polo García
+email: sergio.polo@example.com
+description: "Desarrollador de Software especializado en C# con más de 2 años de experiencia."
+baseurl: "" # Si el sitio está en una subcarpeta
+url: "https://sergiopologarcia.github.io" # URL del sitio
+github_username: SergioPoloGarcia
 
-# Build settings
+# Opciones de configuración
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+
+# Permalinks
+permalink: /:title/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
